# compwesr

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  build.py  main.py  pyproject.toml
.github/workflows/: build.yml  ci.yml
src/: compress.py  images.py  quality.py  report.py  videos.py
tests/: conftest.py  test_cli.py  test_compress.py  test_images.py  test_quality.py  test_report.py  test_videos.py
